--- a/src/assets/scss/partial/_variables.scss
+++ b/src/assets/scss/partial/_variables.scss
@@ -1,4 +1,20 @@
 $text-color : #B5B5B5;
+$white: #ffffff;
+$black: #000000;
+$yellow: #F2D803;
+$box-font: #A0A0A0;
+$info-font-color: #787878;
+$info-hover-color: #0022FF;
+$bg-text: #f7f7f7;
+$icon-color: #00B0FF;
+$fb-bg-box: #385490;
+$fb-icon-box: #E5E5E5;
+$fb-user-bg: #F6F7F9;
+$caro-side-text: #8C8C8C;
+$montserrat : 'Montserrat', sans-serif;
+$playfair-display:'Playfair Display', serif;
+$raleway: 'Raleway', sans-serif;
+$Roboto-Condensed: 'Roboto Condensed', sans-serif;
 //    Font Family
 
 
