--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,7 +9,7 @@
 @import "partial/sidebar";
 @import "partial/footer";
 @import "partial/override";
-
+@import "partial/variables";
 @import 'Surfers/surfers.scss';
 
 
