--- a/src/assets/scss/Surfers/navbar.scss
+++ b/src/assets/scss/Surfers/navbar.scss
@@ -26,7 +26,7 @@
         &-title{
             color: $black;
             font-size: 50px;
-            font-family: $playfair-display;
+            font-family: $montserrat;
             font-style: italic;
             @media only screen and (max-width: 768px){
                 font-size: 40px;
